[package]
name = "prost-test"
version = "0.1.0"
edition = "2021"
build="build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10"
# Only necessary if using Protobuf well-known types:
prost-types = "0.10"
prost-msg-id="0.1"
anyhow = "1"
paste="1.0"

[build-dependencies]
prost-build = {path="../prost-build-type"}